# majorcycle

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  daily-refresh.yml  weekly-enriched-refresh.yml
analytics/: config.py  major_cycle.py  presets.py  pyproject.toml
analytics/cron/: daily_refresh.py  drain_requests.py  fix_insider_transactions.py  fix_pe_history.py  fix_split_history.py  refresh_index_membership.py  refresh_listings.py
analytics/index_membership/: __init__.py  sources.py
analytics/listings/: __init__.py  normalize.py  sources.py
analytics/providers/: base.py  fmp_provider.py  yfinance_provider.py
analytics/scoring/: financial_health.py  overall.py  valuation.py
analytics/tests/: test_daily_refresh.py  test_index_membership.py  test_listings.py  test_major_cycle.py  test_placeholder.py  test_scoring.py  test_yfinance_provider.py
analytics/universe/: asx200.csv  generate_index_membership.py  indices.csv  sp500.csv  tsx60.csv
docs/: architecture.md  coding-standards.md  data-contracts.md  design-system.md  glossary.md  layer-c-audit.md  layer-d-audit.md  layer-e-audit.md  local-stripe-testing.md  methodology-audit.md  roadmap.md
reference/: email-signature.html  email-templates.html  major_cycle.py  original-design.html
supabase/: .gitignore  README.md
supabase/migrations/: 20260712000000_referrals.sql  (+22 more)
web/: .gitignore  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  requirements.txt  vercel.json
(+187 files in other folders)
